// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recycle-bin-reference-tests get-recycle-bin-document-original-parent should get original parent for recycled document 1`] = `
{
  "content": [],
  "structuredContent": null,
}
`;

exports[`recycle-bin-reference-tests get-recycle-bin-document-original-parent should handle non-existent recycled document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The document could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`recycle-bin-reference-tests get-recycle-bin-document-referenced-by should get references for recycled document 1`] = `
{
  "content": [
    {
      "text": "{"status":404,"detail":"Not Found"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`recycle-bin-reference-tests get-recycle-bin-document-referenced-by should get references with pagination for recycled document 1`] = `
{
  "content": [
    {
      "text": "{"status":404,"detail":"Not Found"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`recycle-bin-reference-tests get-recycle-bin-document-referenced-by should handle non-existent recycled document 1`] = `
{
  "content": [
    {
      "text": "{"status":404,"detail":"Not Found"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
